k8s/php-fpm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm
  labels:
    app: php-fpm
spec:
  selector:
    matchLabels:
      app: php-fpm
  strategy: {}
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
      - name: php-fpm
        image: metric_app:unreleased
        args: ["--start-cgi-server"]
        ports:
        - containerPort: 9000
        resources: {}
