k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: web
status:
  loadBalancer: {}
