k8s/php-fpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-fpm
  labels:
    app: php-fpm
spec:
  ports:
    - port: 9000
  selector:
    app: php-fpm
